<resources>
    <string name="app_name">Baking Time</string>
    <string name="cross_path_name">cross_path</string>
    <string name="check_path_name">check_path</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="navigation_content_describe">navigation back</string>
</resources>
