<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_recipe_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_recipe_detail"
        style="?actionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        app:navigationContentDescription="@string/navigation_content_describe"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextColor="@android:color/white" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_recipe"
        style="@style/Widget.Design.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>